# yuma123-netconfd-module

./: CHANGELOG  LICENSE  Makefile.am  README  README.md  configure.ac  decode.c  decode.h  display-pipe-wrapper  display-x11.c  display.c  gcode-run  generator-start.py  gpios-get  gpios-get-gpiod  gpios-get-sysfs  gpios-init  gpios-init-sysfs  gpios-set  gpios-set-gpiod  gpios-set-sysfs  gpios.c  lights-init  lights-set  lsi-bar-set  lsi-bar.c  lsi-bar.yang  lsi-camera-cameras-get  lsi-camera-cameras-get-pi  lsi-camera-cameras-get-v4l2  lsi-camera.c  lsi-camera.yang  lsi-display.yang  lsi-foo-get  lsi-foo.c  lsi-foo.yang  lsi-gcode.yang  lsi-gpios-raspberry-pi-names.yang  lsi-gpios.yang  lsi-ivi-dc-power-get  (+50 more)
debian/: changelog  control  copyright
example/: README  diode-gpib.py  diode-netconf.py  find-resonance.m  generate-chirp.m  generate-sine-100.m  generate_chirp.m  lights-netconf.py  loop.sh  networks.xml  preview.py  run.sh  switch-loop-netconf.py  switch-loop-yangcli.py  test-w-generator-standard-function.py  test-w-generator.py  test-yangcli.py  test.py
